# FlowState

./: LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: PLUGIN_DEV.md  WHITEPAPER.md
migrations/: 001_init.sql  002_ai_chat.sql  003_signals.sql  004_cognitive_state.sql  005_plugin_registry.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cognitive_score.rs  db.rs  db_viewer.rs  focus_macos.rs  focus_windows.rs  fs.rs  git.rs  git_ops.rs  github_ci.rs  mod.rs  ollama.rs  plugin_runtime.rs  signals.rs  terminal.rs
src-tauri/src/state/: mod.rs
src/components/ai/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ModelSwitcher.tsx
src/components/ci/: CIPanel.tsx
src/components/dashboard/: CognitiveLoadGauge.tsx  DashboardPanel.tsx  SignalBreakdown.tsx  WeightSettings.tsx
src/components/database/: DatabasePanel.tsx
src/components/docs/: DocsPanel.tsx
src/components/editor/: EditorWorkspace.tsx  MonacoEditor.tsx
src/components/git/: BranchManager.tsx  CommitStager.tsx  GitDiff.tsx  GitLog.tsx  GitPanel.tsx  GitStatus.tsx  RemoteManager.tsx
src/components/layout/: ActivityBar.tsx  ResizablePanels.tsx  StatusBar.tsx  TitleBar.tsx  ToolPanel.tsx  WorkspaceShell.tsx
src/components/onboarding/: FocusSetupCheck.tsx  FocusSetupWizard.tsx  OnboardingWizard.tsx
src/components/plugins/: PermissionDialog.tsx  PluginPanel.tsx  (+1 more)
src/hooks/: useChat.ts  useCognitiveScore.ts  useCompletion.ts  useFocusMode.ts  useGitDiff.ts  useGitLog.ts  useGitOps.ts  useGitStatus.ts  useOllamaModels.ts  useShortcuts.ts  useSignalCollector.ts  useTerminal.ts  useWorkspace.ts
src/lib/: db.ts  tauri.ts
src/types/: ai.types.ts  cognitive.types.ts  db.types.ts  git.types.ts
(+1 files in other folders)
