[package]
name = "flowstate"
version = "0.1.0"
edition = "2021"

[lib]
name = "flowstate_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
git2 = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "UI_Shell",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security"
] }

[profile.release]
# Optimize for binary size, which is standard for Tauri desktop apps
opt-level = "s"
panic = "abort"
codegen-units = 1
lto = true